--- a/client/modules/Lane/Lane.css
+++ b/client/modules/Lane/Lane.css
@@ -1,1 +1,98 @@
 /* Lane styles */
+
+.AddLane {
+	margin: 20px 10px;
+	border: none;
+	border-radius: 4px;
+	padding: 10px;
+	width: 300px;
+	background-color: gray;
+	color: #f1f1f1;
+	font-size: 15px;
+	font-weight: 300;
+	text-align: left;
+	cursor: pointer;
+}
+
+.AddLane:hover {
+	color: #fff;
+}
+
+.Lanes {
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	height: 100%;
+}
+
+.Lane {
+	display: flex;
+	flex-direction: column;
+	border-radius: 4px;
+	margin: 10px 10px;
+	padding: 10px;
+	width: 300px;
+	height: auto;
+	background-color: bisque;
+}
+
+.LaneHeader {
+	color: black;
+}
+
+.LaneName {
+	display: inline-block;
+	border-top-left-radius: 4px;
+	padding: 10px;
+	width: 90%;
+	max-height: 38px;
+	background-color: darkgray;
+	font-size: 1.2em;
+	font-weight: bold;
+	color: #f1f1f1;
+}
+.LaneDelete {
+	box-sizing: border-box;
+}
+
+.LaneDelete button {
+	box-sizing: border-box;
+	display: inline-block;
+	border: none;
+	padding: 10px;
+	outline: 0;
+	font-size: 1em;
+	color: #f1f1f1;
+	background-color: darkgrey;
+	width: 10%;
+	cursor: pointer;
+}
+
+.LaneDelete button:active {
+	border: none;
+	color: #fff;
+}
+
+.LaneAddNote button {
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border: none;
+	padding: 10px;
+	outline: 0;
+	width: 100%;
+	font-size: 0.8em;
+	color: #f1f1f1;
+	text-align: left;
+	background-color: darkgray;
+	cursor: pointer;
+}
+
+.LaneAddNote button:hover {
+	color: fff;
+}
+@media (max-width: 992px) {
+	.Lanes {
+		flex-direction: column;
+		align-items: center;
+	}
+}
