--- a/client/modules/App/App.css
+++ b/client/modules/App/App.css
@@ -1,6 +1,12 @@
 .container {
-  max-width: 980px;
+  height: 100vh;
   width: 100%;
   padding: 15px;
   margin: 0 auto;
+  background-color: #FFE6E6;
+}
+@media (max-width: 992px) {
+  .container {
+    height: 100%;
+  }
 }
